--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@ This is a **rich text editor** built with ProseMirror that supports bidirectiona
 
 - Bullet point one
 - Bullet point two
-  - Nested item
+  - Nested item 1
+  - Nested item 2
 - Bullet point three
 
 ```javascript
