default compact theme

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-rhythm="compact">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,12 +56,12 @@
                 </div>
                 <div class="rhythm-switcher">
                     <label>
-                        <input type="radio" name="rhythm" value="comfortable" checked>
-                        <span>Comfortable</span>
+                        <input type="radio" name="rhythm" value="compact" checked>
+                        <span>Compact</span>
                     </label>
                     <label>
-                        <input type="radio" name="rhythm" value="compact">
-                        <span>Compact</span>
+                        <input type="radio" name="rhythm" value="comfortable">
+                        <span>Comfortable</span>
                     </label>
                 </div>
             </div>
