--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     <link rel="stylesheet" href="./style.less">
 </head>
-<body class=show-baseline>
+<body>
     <div class="app">
         <header class="header">
             <h1>ProseMirror Markdown Editor</h1>
